fix(api): stop re-running the summary refresh for tickets that can never be classified
The page treated any classification gap as a reason to refresh. A closed
ticket whose Slack thread is gone (or whose model output never parses)
is a permanent gap, so every poll restarted the backfill and regenerated
the summary — the UI sat on the spinner forever and the model was called
every few seconds.

The gaps are now part of the data fingerprint (count and id-sum of closed
tickets awaiting classification). A snapshot generated after a backfill
that could not classify everything is stored under a fingerprint that
carries those gaps, so it is served until the gap set actually changes;
a newly closed ticket still changes the fingerprint and triggers a
refresh. The refresh logs a warning naming how many tickets it skipped.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Qx3UGqD9xAVo7f9xBrgrHL